28-06-2026 - Added an embed to display the lastest devlog in the home page - Changed team.html and styles.css to fix the display on smaller devices

--- a/styles.css
+++ b/styles.css
@@ -184,31 +184,42 @@ a:hover {
     opacity: 0.4;
     z-index: 2;
 }
-.home-team-box {
-    background-color: rgb(22, 22, 22);
-    width: 60%;
-    margin: auto;
-    padding-bottom: 1px;
+.home-bottom {
+    width: 100%;
+    margin: 20px 0;
 }
-.home-team-box h2 {
+.home-bottom h2 {
     color: #a134cf;
     padding-top: 15px;
     margin: 0;
     text-align: center;
 }
-.home-team-box h3 {
+.home-bottom h3 {
     color: white;
     margin: 0;
     text-align: center;
 }
-.home-team-box p {
+.home-bottom p {
     margin: 0;
     color: white;
     text-align: center;
 }
-.home-team-box hr {
+.home-bottom hr {
     color: rgb(170, 170, 170);
     width: 95%;
+}
+.home-video-box {
+    width: 58%;
+    min-height: 80px;
+    margin: 0 auto 20px;
+    display: flex;
+    justify-content: center;
+}
+.home-team-box {
+    background-color: rgb(22, 22, 22);
+    width: 60%;
+    margin: auto;
+    padding-bottom: 1px;
 }
 .home-team-pfp-box {
     display: flex;
@@ -238,7 +249,10 @@ a:hover {
     background-color: rgb(22, 22, 22);
     width: 100%;
     min-height: 250px;
-    margin: 20px;
+    margin: 20px 0;
+    display: flex;
+    gap: 20px;
+    padding: 20px;
 }
 .team-box h1 {
     color: black;
@@ -246,7 +260,7 @@ a:hover {
 .team-box h2 {
     color: white;
     margin: 0;
-    float: left;
+    padding-right: 20px;
 }
 .team-box p {
     color: white;
@@ -259,22 +273,26 @@ a:hover {
     display: flex;
     justify-content: center;
     float: left;
+    flex: 0 0 200px
 }
 .team-skin img {
     margin: 20px;
     height: 200px;
     width: auto;
 }
-.team-box-title {
-    padding-top: 20px;
+.team-content {
+    flex: 1;
+    min-width: 0;
+}
+.team-content-top {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .team-box-socials {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
-.team-box-socials a {
-    padding-left: 20px;
 }
 .team-box-socials img {
     height: 60px;
@@ -284,6 +302,7 @@ a:hover {
     display: flex;
     flex-direction: row;
     gap: 10px;
+    flex-wrap: wrap;
 }
 .tag {
     background-color: #a134cf;
